--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
 packaging==24.0
+psycopg2==2.9.9
 python-decouple==3.8
 pytz==2024.1
 requests==2.31.0
