--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ packaging==24.0
 psycopg2==2.9.9
 python-decouple==3.8
 pytz==2024.1
+redis==5.0.3
 requests==2.31.0
 six==1.16.0
 SQLAlchemy==2.0.29
